# dicomlock

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PREPRINT.md  PREPRINT_DEID.md  README.md  REPRODUCE.md  SECURITY.md  STUDY_DESIGN.md  THREAT_MODEL.md  download_tcia.py  generate_fakes.py  make_tampered_corpus.py  pyproject.toml  requirements.txt  scan.py  server.py  train_classifier.py  validate.py  validate_honest.py
_attack_test/: cdr_vs_parsers.py  compare_baseline.py  compressed_polyglot.dcm  disarm_compressed.py  disarm_spike.py  fidelity_crossdecoder.py  fp_mixed_corpus.py  hidden_in_vendor.dcm  length_bomb.dcm  prove_attack_surface.py  test_allowlist.py  test_reid_score.py  test_sandbox.py  validate_phase1.py  validate_scale.py
_attack_test/aim3/: Dockerfile  Dockerfile.afl  README.md  afl_entry.sh  run_aim3.py
_attack_test/aim3/seeds/: GDCMJ2K_TextGBR.jp2  J2K_pixelrep_mismatch.j2k  MR_small_jp2klossless.j2k
bench/: README.md  __init__.py  __main__.py  corpus.py  diverse_check.py  evaluate.py  fidelity.py  generate.py  perf.py  pinned.py  reid_audit.py  reid_vs_anonymizer.py  report.py  targets.py
preprint/: preprint.tex
samples/tampered/: bad_magic.dcm  deep_nesting.dcm  deflated_zlib.dcm  high_entropy_preamble.dcm  htj2k.dcm  jpip_reference.dcm  length_bomb_explicit.dcm  pixel_decompress_bomb.dcm  pixel_dimension_bomb.dcm  polyglot_elf.dcm  polyglot_gzip.dcm  polyglot_macho.dcm  polyglot_pdf.dcm  polyglot_pe.dcm  polyglot_shell.dcm  polyglot_zip.dcm  private_payload.dcm  video_h264.dcm  video_hevc.dcm
scanner/: _resources.py  _sandbox.py  calibration.py  classify.py  cli.py  codec_cve.py  deid_auditor.py  disarm.py  file_security.py  findings.py  ingest.py  metadata.py  pipeline.py  pixel_advanced.py  pixel_analysis.py  server.py
scanner/data/: dicom_codec_cve.json  vendor_private_tags.json
scanner/web/: index.html  script.js  style.css
web/: index.html  script.js  style.css
